[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/HUD/ShieldBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/CargoProgress.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://addons/virtual_joystick/scripts/virtual_joystick.gd" type="Script" id=4]
[ext_resource path="res://addons/virtual_joystick/sprites/joystick1.png" type="Texture" id=5]
[ext_resource path="res://addons/virtual_joystick/sprites/stick1.png" type="Texture" id=6]
[ext_resource path="res://UI/HUD/D.png" type="Texture" id=7]
[ext_resource path="res://UI/HUD/M.png" type="Texture" id=8]
[ext_resource path="res://UI/HUD/f.png" type="Texture" id=9]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ShieldBar" parent="." instance=ExtResource( 1 )]
margin_left = 24.0
margin_top = 24.0
margin_right = 296.0
margin_bottom = 64.0
stretch_margin_left = 40
stretch_margin_right = 56

[node name="CargoGauge" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -168.0
margin_top = 32.0
margin_right = -40.0
margin_bottom = 160.0

[node name="Joystick" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.772549 )
position = Vector2( 122, 585 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 4 )
border = ExtResource( 5 )
stick = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -295.0
margin_top = -285.0
margin_right = -1.0
margin_bottom = -1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_bottom = 284.0

[node name="MapButton" type="TouchScreenButton" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( -6, 123 )
scale = Vector2( 1.8, 1.8 )
normal = ExtResource( 8 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 284.0

[node name="DockButton" type="TouchScreenButton" parent="HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 136, -20 )
scale = Vector2( 1.8, 1.8 )
normal = ExtResource( 7 )

[node name="FireButton" type="TouchScreenButton" parent="HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 107, 94 )
scale = Vector2( 1.8, 1.8 )
normal = ExtResource( 9 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/DockButton" to="." method="_on_DockButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/FireButton" to="." method="_on_FireButton_pressed"]
[connection signal="released" from="HBoxContainer/VBoxContainer2/FireButton" to="." method="_on_FireButton_released"]
